# noslop

./: .gitattributes  .gitignore  .noslop.toml  .ralph-log  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  RESTRUCTURE_PLAN.md  ROADMAP.md  STORAGE.md  action.yml  clippy.toml  rustfmt.toml  setup-migration-plan.md
.github/workflows/: cd.yml  ci.yml  noslop.yml  release.yml
.noslop/: rejected-keys.txt  rejected-rules.txt
.noslop/acks/: NOS-12-1e5fe29859591683.json  NOS-12-4a5838673514681a.json  NOS-12-4e6a91011438bc34.json  NOS-12-8c48c488877c0f2f.json  NOS-12-c9115039c04ef5b.json  NOS-12-d1f66f2489596601.json  NOS-12-d4a96b37561d62e7.json  NOS-12-ef9cf2b8bd710c9b.json  NOS-12-f4fb5bd89e05c65d.json  NOS-12-fede5203ff83f11c.json  NOS-12-ff5467099c947c81.json  NOS-13-1762365fb52a3a6c.json  NOS-13-21afae8095d7e309.json  NOS-13-2849ac45576c6a20.json  NOS-13-2da84f237503f455.json  NOS-13-449456dd7320cacb.json  NOS-13-49b20fdc54ea7edf.json  NOS-13-59ad5517fdde2470.json  NOS-13-6e7dae43ad79fd6b.json  NOS-13-8512e22621b628fa.json  NOS-13-996153338b499f4b.json  NOS-13-ab487a76fd5c4e8c.json  NOS-13-bd69bf24ce4b6b09.json  NOS-13-c0a378334c3ab642.json  NOS-13-d34586839166e100.json  NOS-13-e3cb4f333cc61316.json  NOS-13-f15e220ddfc44fe5.json  NOS-13-f24a731652c97ded.json  NOS-13-fba7e460dfcba347.json  NOS-14-10d9cc88e15a14dc.json  NOS-14-8c1746a3bd582b5c.json  NOS-15-1c1390db40743721.json  NOS-15-4f303eb261e0cfb6.json  NOS-15-5181c42fbd239edf.json  NOS-15-5ad02bafee1e2854.json  NOS-15-735fcad17e03fc81.json  NOS-15-942343081230c57c.json  NOS-15-96ca8a21f692b0d2.json  NOS-15-baa0043398bb0d21.json  NOS-15-c90fd4a8ee926093.json  (+40 more)
docs/: CI_CD.md  SCHEMA.md  WORKTREE_AGENTS_SPEC.md  competitive-analysis.md  ui-redesign.md
docs/stories/: 00-overview.md  01-rename-check-verify.md  02-branch-scoped-tasks.md  03-commit-task-completion.md  04-sub-branch-hierarchy.md  05-local-web-ui.md  06-agent-workflow.md
gui/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  vitest.config.ts
gui/src/: app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs
migration/: 00-core-domain-model.md  01-noslop-analysis.md  01-review-pipeline.md  02-agent-system.md  02-setup-analysis.md  03-agent-port-design.md  03-vcs-config-cli.md  04-agent-adapters-design.md  04-implementation-plan.md  05-checkpoint-worktree-design.md  05-test-strategy.md  06-gui-ux-research.md  06-run-loop-design.md  07-init-expansion-design.md  08-config-design.md  09-gui-design.md  09-test-strategy.md  10-implementation-plan.md
scripts/: coverage-check.sh  install.sh  pre-commit.sh  pre-push.sh
src/: cli.rs  config.rs  lib.rs  main.rs  noslop_file.rs  output.rs  paths.rs  resolver.rs  scope.rs  target.rs
src/adapters/: mod.rs  review.rs
src/api/: error.rs  handlers.rs  mod.rs  types.rs
src/cli/: app.rs  mod.rs
src/commands/: add_trailers.rs  agent.rs  assert_cmd.rs  attest.rs  check.rs  check_cmd.rs  clear_staged.rs  init.rs  mod.rs  status.rs  task.rs  task_prompt.rs  ui.rs  verify.rs
src/core/: mod.rs
src/git/: hooks.rs  mod.rs  staged.rs
src/models/: assertion.rs  attestation.rs  check.rs  mod.rs  (+2 more)
tests/: adapter.rs  unit.rs
ui/: components.json  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
(+552 files in other folders)
