[package]
name = "noslop"
version = "0.1.2"
edition = "2024"
authors = ["noslop.sh team"]
description = "A CLI tool to maintain high code and documentation quality in AI-assisted development"
license = "AGPL-3.0-or-later"
repository = "https://github.com/noslop-sh/noslop"
readme = "README.md"
keywords = ["cli", "ai", "quality", "linting", "provenance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "cargo"] }
colored = "3.0.0"
dirs = "6.0"
env_logger = "0.11.8"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
glob = "0.3.3"
log = "0.4.28"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tiny_http = { version = "0.12", optional = true }
notify = { version = "8.2", optional = true }
include_dir = { version = "0.7", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
toml = "0.9.8"
walkdir = "2.5.0"

[features]
default = []
llm = ["tokio", "reqwest"]
tokio = ["dep:tokio"]
reqwest = ["dep:reqwest"]
ui = ["tiny_http", "notify", "include_dir"]
include_dir = ["dep:include_dir"]

[[bin]]
name = "noslop"
path = "src/main.rs"

[lib]
name = "noslop"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serial_test = "3.2"
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
