[package]
name = "noslop"
version = "0.2.0"
edition = "2024"
authors = ["noslop.sh team"]
description = "A CLI tool to maintain high code and documentation quality in AI-assisted development"
license = "AGPL-3.0-or-later"
repository = "https://github.com/noslop-sh/noslop"
readme = "README.md"
keywords = ["cli", "ai", "quality", "linting", "provenance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "cargo"] }
env_logger = "0.11.8"
glob = "0.3.3"
regex = "1.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"

[[bin]]
name = "noslop"
path = "src/main.rs"

[lib]
name = "noslop"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2.1.1"
mockall = "0.13"
predicates = "3.1.3"
pretty_assertions = "1.4"
proptest = "1.5"
tempfile = "3.23.0"
test-case = "3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
