[package]
name = "noslop-gui"
version = "0.1.0"
description = "noslop Code Review GUI"
authors = ["noslop"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "noslop_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
noslop = { path = "../../" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3"
